methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: not found: type boolean
def move(nbPas: Int, versLAvant: boolean){
                                 ^MethodsArgs:4: error: value foreach is not a member of Int
    for (i<- nbPas){
             ^MethodsArgs:8: error: value foreach is not a member of Int
    for (i<-nbPas){
            ^