methods.args.MethodsArgs.scala.code
def move(nbPas: Int, versLAvant: boolean){
  if (versLAvant){
    for (i<- nbPas){
      avance()
    }
  } else{
    for (i<-nbPas){
      recule()
    }
  }
}